0.planet9-all/2.POSTGRES-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: planet9db-ext-svc
spec:
  type: ExternalName
  externalName: planet9.cjpkgpd6mbtc.us-east-1.rds.amazonaws.com
